Referencias entre capas

--- a/MCEI.SysRegisAdmin.BL/MCEI.SysRegisAdmin.BL.csproj
+++ b/MCEI.SysRegisAdmin.BL/MCEI.SysRegisAdmin.BL.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MCEI.SysRegisAdmin.DAL\MCEI.SysRegisAdmin.DAL.csproj" />
+    <ProjectReference Include="..\MCEI.SysRegisAdmin.EN\MCEI.SysRegisAdmin.EN.csproj" />
+  </ItemGroup>
+
 </Project>
