--- a/MCEI.SysRegisAdmin.DAL/MCEI.SysRegisAdmin.DAL.csproj
+++ b/MCEI.SysRegisAdmin.DAL/MCEI.SysRegisAdmin.DAL.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MCEI.SysRegisAdmin.EN\MCEI.SysRegisAdmin.EN.csproj" />
+  </ItemGroup>
+
 </Project>
