--- a/MCEI.SysRegisAdmin.WebApp/MCEI.SysRegisAdmin.WebApp.csproj
+++ b/MCEI.SysRegisAdmin.WebApp/MCEI.SysRegisAdmin.WebApp.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MCEI.SysRegisAdmin.BL\MCEI.SysRegisAdmin.BL.csproj" />
     <ProjectReference Include="..\MCEI.SysRegisAdmin.EN\MCEI.SysRegisAdmin.EN.csproj" />
   </ItemGroup>
