Script Principal a Usar Para La BD

--- a/MCEI.SysRegisAdmin.DAL/MCEI.SysRegisAdmin.DAL.csproj
+++ b/MCEI.SysRegisAdmin.DAL/MCEI.SysRegisAdmin.DAL.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\MCEI.SysRegisAdmin.EN\MCEI.SysRegisAdmin.EN.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Document\" />
+  </ItemGroup>
+
 </Project>
