Instalacion de SweetAlert2

--- a/MCEI.SysRegisAdmin.WebApp/MCEI.SysRegisAdmin.WebApp.csproj
+++ b/MCEI.SysRegisAdmin.WebApp/MCEI.SysRegisAdmin.WebApp.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\MCEI.SysRegisAdmin.EN\MCEI.SysRegisAdmin.EN.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\plugins\SweetAlert2\js\" />
+  </ItemGroup>
+
 </Project>
