Instalacion de Plugin DataTable

--- a/MCEI.SysRegisAdmin.WebApp/MCEI.SysRegisAdmin.WebApp.csproj
+++ b/MCEI.SysRegisAdmin.WebApp/MCEI.SysRegisAdmin.WebApp.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\plugins\DataTables\js\" />
     <Folder Include="wwwroot\plugins\SweetAlert2\js\" />
   </ItemGroup>
 
