--- a/MCEI.SysRegisAdmin.WebApp/MCEI.SysRegisAdmin.WebApp.csproj
+++ b/MCEI.SysRegisAdmin.WebApp/MCEI.SysRegisAdmin.WebApp.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\plugins\DataTables\js\" />
+    <Folder Include="wwwroot\plugins\Select2\js\" />
     <Folder Include="wwwroot\plugins\SweetAlert2\js\" />
   </ItemGroup>
 
